--- a/layouts/partials/custom/head-end.html
+++ b/layouts/partials/custom/head-end.html
@@ -6,3 +6,5 @@
 <!-- EasyZoom JS -->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/easyzoom/2.5.0/easyzoom.min.js" defer></script>
 
+<script src="/js/cart.js" defer></script>
+
