--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -76,50 +76,20 @@
  <div class="flex justify-center items-center space-x-3">
   <!-- 公众号二维码 -->
   <div class="text-center">
-    <img src="/images/qygzh.jpg" alt="公众号二维码" class="w-24 h-24 mx-auto rounded shadow-md">
+    <img src="images/qygzh.jpg" alt="公众号二维码" class="w-24 h-24 mx-auto rounded shadow-md">
     <p class="mt-1 text-gray-600 text-sm">公众号</p>
   </div>
   <!-- 抖音二维码 -->
   <div class="text-center">
-    <img src="/images/douyin.jpg" alt="抖音二维码" class="w-24 h-24 mx-auto rounded shadow-md">
+    <img src="images/douyin.jpg" alt="抖音二维码" class="w-24 h-24 mx-auto rounded shadow-md">
     <p class="mt-1 text-gray-600 text-sm">抖音</p>
   </div>
   <!-- 微信二维码 -->
   <div class="text-center">
-    <img src="/images/sk-wechat.jpg" alt="微信二维码" class="w-24 h-24 mx-auto rounded shadow-md">
+    <img src="images/sk-wechat.jpg" alt="微信二维码" class="w-24 h-24 mx-auto rounded shadow-md">
     <p class="mt-1 text-gray-600 text-sm">微信</p>
   </div>
 </div>
-<!-- 社交图标 -->
-  <div class="mt-6 flex space-x-2 w-3/4">
-    <a href="#" target="_blank" rel="noopener noreferrer" class="text-gray-400 hover:text-blue-400 transition duration-300">
-      {{- partial "utils/icon.html" (dict "name" "facebook" "attributes" "height=24 width=24 fill=currentColor") -}}
-    </a>
-    <a href="#" target="_blank" rel="noopener noreferrer" class="text-gray-400 hover:text-blue-400 transition duration-300">
-      {{- partial "utils/icon.html" (dict "name" "twitter" "attributes" "height=24 width=24 fill=currentColor") -}}
-    </a>
-    <a href="#" target="_blank" rel="noopener noreferrer" class="text-gray-400 hover:text-blue-400 transition duration-300">
-      {{- partial "utils/icon.html" (dict "name" "linkedin" "attributes" "height=24 width=24 fill=currentColor") -}}
-    </a>
-    <a href="#" target="_blank" rel="noopener noreferrer" class="text-gray-400 hover:text-blue-400 transition duration-300">
-      {{- partial "utils/icon.html" (dict "name" "youtube" "attributes" "height=24 width=24 fill=currentColor") -}}
-    </a>
-    <a href="#" target="_blank" rel="noopener noreferrer" class="text-gray-400 hover:text-blue-400 transition duration-300">
-      {{- partial "utils/icon.html" (dict "name" "whatsapp" "attributes" "height=24 width=24 fill=currentColor") -}}
-    </a>
-    <a href="#" target="_blank" rel="noopener noreferrer" class="text-gray-400 hover:text-blue-400 transition duration-300">
-      {{- partial "utils/icon.html" (dict "name" "instagram" "attributes" "height=24 width=24 fill=currentColor") -}}
-    </a>
-    <a href="#" target="_blank" rel="noopener noreferrer" class="text-gray-400 hover:text-blue-400 transition duration-300">
-      {{- partial "utils/icon.html" (dict "name" "telegram" "attributes" "height=24 width=24 fill=currentColor") -}}
-    </a>
-    <a href="#" target="_blank" rel="noopener noreferrer" class="text-gray-400 hover:text-blue-400 transition duration-300">
-      {{- partial "utils/icon.html" (dict "name" "douyin" "attributes" "height=24 width=24 fill=currentColor") -}}
-    </a>
-    <a href="#" target="_blank" rel="noopener noreferrer" class="text-gray-400 hover:text-blue-400 transition duration-300">
-      {{- partial "utils/icon.html" (dict "name" "wechat" "attributes" "height=24 width=24 fill=currentColor") -}}
-    </a>
-  </div>
     </div>
       </div>
 <!-- 版权信息 -->
